# seatools-starter-web-fastapi

./: .cookiecutter.json  README.md  pyproject.toml
docs/: 版本说明.md
src/seatools/ioc/server/: app.py
src/seatools/ioc/starters/fastapi/: base.py
