[project]
name = "seatools-starter-web-fastapi"
version = "1.0.0"
authors = [
    { name = "seatools-py", email = "521274311@qq.com" },
]
description = "Seatools Starter Web Fastapi"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
keywords = [
    "seatools",
    "starter",
]

dependencies = [
    "seatools",
    "fastapi",
]

[project.urls]
Homepage = "https://github.com/seatools-py/seatools-starter-web-fastapi"
Issues = "https://github.com/seatools-py/seatools-starter-web-fastapi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "seatools",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/seatools/ioc/starters/fastapi/*",
    "src/seatools/ioc/server/*"
]
sources = ["src"]
